# JARVIS

./: .env.example  .gitignore  .swiftlint.yml  AGENTS.md  Brewfile  JARVIS.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.claude/skills/: context7-mcp  ruff  swift-expert
.github/workflows/: ci.yml  swift-ci.yml
bridges/apple/FoundationModelsBridge/: Package.resolved  Package.swift
bridges/apple/SpeechAnalyzerCLI/: Package.resolved  Package.swift
docs/architecture/: JARVIS.md
docs/decisions/: README.md
docs/guides/: setup-macos.md
docs/testing/: strategy.md
jarvis/: bus.py  config.py  main.py  prompts.py  runtime.py
jarvis/adapters/: __init__.py  factory.py  interfaces.py
jarvis/adapters/activation/: porcupine.py  push_to_talk.py
jarvis/adapters/llm/: anthropic.py  foundation_models.py  mlx_lm.py  openai.py
jarvis/adapters/memory/: sqlite_vec.py
jarvis/adapters/stt/: __init__.py  speech_analyzer.py
jarvis/adapters/tts/: __init__.py  mlx_audio_kokoro.py  mlx_audio_qwen3.py
jarvis/adapters/vad/: speech_detector.py
jarvis/audio/: __init__.py  playback.py
jarvis/core/: __init__.py  action_broker.py  capability_broker.py  complexity_router.py  dialogue_manager.py  policy_engine.py  resource_governor.py  sentence_streamer.py  speech_pipeline.py  state_machine.py  turn_manager.py
jarvis/memory/: __init__.py  embedding.py  provenance.py  relevance.py  store.py  system.py
jarvis/models/: __init__.py  actions.py  conversation.py  events.py
jarvis/tools/: __init__.py  browser.py  calendar.py  files.py  security.py  shell.py  system.py  timer.py
scripts/: bootstrap-macos.sh  build-bridges.sh  setup-macos.sh  test-all.sh
src/jarvis/: __init__.py  audio_gate.py  bus.py  cli.py  config.py  doctor.py  llm_postprocess.py  main.py  model_cache.py  observers.py  ollama.py  pipeline.py  prompt.py  prompts.py  runtime.py  turn_gate.py  turn_presets.py  turn_stop.py  warmup.py
src/jarvis/adapters/: __init__.py  factory.py  interfaces.py
src/jarvis/adapters/activation/: __init__.py  porcupine.py  push_to_talk.py
src/jarvis/adapters/llm/: __init__.py  anthropic.py  fake.py  foundation_models.py  mlx_lm.py  (+1 more)
src/jarvis/audio/: playback.py
src/jarvis/core/: action_broker.py  capability_broker.py  complexity_router.py  dialogue_manager.py  policy_engine.py  resource_governor.py  sentence_streamer.py  speech_pipeline.py  state_machine.py  turn_manager.py
src/jarvis/memory/: __init__.py  embedding.py  provenance.py  store.py  system.py
src/jarvis/models/: __init__.py  events.py  memory.py  state.py
src/jarvis/observability/: __init__.py  logging.py  trace.py
src/jarvis/tools/: __init__.py  calendar.py  files.py  security.py  system.py  timer.py
swift/FoundationModelsBridge/: Package.resolved  Package.swift
swift/FoundationModelsBridge/Sources/: main.swift
swift/SpeechAnalyzerCLI/: Package.swift
swift/SpeechAnalyzerCLI/Sources/: main.swift
tests/: test_action_broker.py  test_barge_in.py  test_bus.py  test_capability_broker.py  test_complexity_router.py  test_config.py  test_dialogue_manager.py  test_factory.py  test_foundation_models.py  test_main.py  test_memory.py  test_mlx_backends.py  test_playback_and_runtime_support.py  test_policy_engine.py  test_runtime.py  test_sentence_streamer.py  test_speech_pipeline.py  test_state_machine.py  test_stt.py  test_support_modules.py  test_tools.py  test_turn_manager.py
tests/python/: conftest.py
tests/python/e2e/: test_text_runtime_smoke.py
tests/python/integration/: test_barge_in.py  test_foundation_models.py  test_main.py  test_memory.py  test_mlx_backends.py  test_playback_and_runtime_support.py  test_runtime.py  test_speech_pipeline.py  test_stt.py  test_tools.py
tests/python/unit/: test_action_broker.py  test_bus.py  test_capability_broker.py  test_complexity_router.py  test_config.py  test_dialogue_manager.py  test_doctor.py  test_factory.py  test_policy_engine.py  test_sentence_streamer.py  test_state_machine.py  test_support_modules.py  test_trace_reporter.py  test_turn_manager.py
(+22 files in other folders)
