[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Local-first conversational runtime for J.A.R.V.I.S."
readme = "JARVIS.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
]

[project.optional-dependencies]
macos-ml = [
    "mlx-lm>=0.24.0",
    "mlx-audio>=0.4.0",
]
audio = [
    "numpy>=1.26,<3",
    "pynput>=1.7,<2",
    "sounddevice>=0.4,<1",
]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["jarvis"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
