[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Local-first conversational runtime for J.A.R.V.I.S."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.4,<26",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "pytest-mock>=3.14,<4",
    "ruff>=0.11,<0.13",
]

[project.optional-dependencies]
macos-ml = [
    "mlx-lm>=0.24.0",
    "mlx-audio[tts]>=0.4.0",
]
macos-native = [
    "pyobjc-framework-EventKit>=10",
    "pyobjc-framework-AVFoundation>=10",
    "pyobjc-framework-ApplicationServices>=10",
]
audio = [
    "numpy>=1.26,<3",
    "pynput>=1.7,<2",
    "sounddevice>=0.4,<1",
]
memory = [
    "sqlite-vec==0.1.3",
    "sentence-transformers>=2.6",
]
cloud = [
    "anthropic>=0.30",
    "openai>=1.35",
]
http = [
    "httpx>=0.27",
]
macos-runtime = [
    "mlx-lm>=0.24.0",
    "mlx-audio[tts]>=0.4.0",
    "numpy>=1.26,<3",
    "pynput>=1.7,<2",
    "sounddevice>=0.4,<1",
    "sqlite-vec==0.1.3",
    "sentence-transformers>=2.6",
    "pyobjc-framework-EventKit>=10",
    "pyobjc-framework-AVFoundation>=10",
    "pyobjc-framework-ApplicationServices>=10",
]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jarvis*"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "strict"
python_files = ["test_*.py"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests spanning multiple components",
    "e2e: end-to-end workflow tests",
]

[tool.coverage.run]
branch = true
source = ["src/jarvis"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
src = ["src", "tests/python"]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/python/**/*.py" = ["B011"]
